--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./ref.css" />
+    <link rel="stylesheet" href="./ref.css" /> -->
     <link rel="shortcut icon" href="./team/shilajit/favicon/android-chrome-192x192.png" type="image/x-icon">
     <link rel="shortcut icon" href="./team/shilajit/favicon/android-chrome-512x512.png" type="image/x-icon">
     <link rel="shortcut icon" href="./team/shilajit/favicon/apple-touch-icon.png" type="image/x-icon">
@@ -31,7 +31,7 @@
       
 
     </div>
-    <div class="container-fluid">
+    <div >
         
         <div id="slider"></div>
         <div id="current">
@@ -313,7 +313,7 @@
 <script src="./team/Somya/header.js" type="module"></script>
 
 <script type="module" >
-    import foot from "./team/somya/footer.js"
+    import foot from "./team/Somya/footer.js"
     let ft = foot()
     document.getElementById("fo").innerHTML = ft
 </script>
