add favicon and title
add favicon and title for all pages

--- a/team/Atul/vases.html
+++ b/team/Atul/vases.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vases</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/android-chrome-512x512.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <p id="txt"><a href="">Home</a> / <a href="">Home Decor</a> / <a href="">home Accents</a> / <a href="">Vases</a></p>
