--- a/team/Atul/jewelry.html
+++ b/team/Atul/jewelry.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/team/shilajit/favicon/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/android-chrome-512x512.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
+    <title>Jewellery</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
