--- a/team/Prithvi/bathroomIdeas.html
+++ b/team/Prithvi/bathroomIdeas.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bathroom Ideas</title>
     <link rel="stylesheet" href="bathroomIdeas.css">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/android-chrome-512x512.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="container">
