--- a/team/shilajit/ref.html
+++ b/team/shilajit/ref.html
@@ -16,9 +16,14 @@
     <link rel="shortcut icon" href="./favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
     <title>Refrigerator</title>
+    <link rel="stylesheet" href="./team/Somya/footer.css">
+    <link rel="stylesheet" href="./team/Somya/header.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 
 <body>
+    
     <div class="container-fluid">
 <!-- <p>
     <svg class="HeaderLogo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 227 228">
