--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
 
     </div>
-    <div >
+    <div class="container-fluid">
         
         <div id="slider"></div>
         <div id="current">
@@ -222,7 +222,7 @@
                         src="https://maps.google.com/maps?q=Tamuning&t=&z=13&ie=UTF8&iwloc=&output=embed"
                         frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     <br>
-                    <style>
+                    <!-- <style>
                         .mapouter {
                             position: relative;
                             text-align: right;
@@ -237,7 +237,7 @@
                             height: 250px;
                             width: 600px;
                         }
-                    </style>
+                    </style> -->
                 </div>
 
             </div>
@@ -308,6 +308,7 @@
 </body>
 
 </html>
+
 <script src="./team/shilajit/scripts/index.js"></script>
 <script src="./team/shilajit/scripts/db.js"></script>
 <script src="./team/Somya/header.js" type="module"></script>
