--- a/team/Atul/vases.html
+++ b/team/Atul/vases.html
@@ -12,6 +12,8 @@
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-16x16.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
+
+    
 </head>
 <body>
     <p id="txt"><a href="">Home</a> / <a href="">Home Decor</a> / <a href="">home Accents</a> / <a href="">Vases</a></p>
@@ -174,7 +176,20 @@
         </div>
         <div id="container"></div>
     </div>
+    <div id="fo">
+
+    </div>
 </body>
 </html>
 <script src="./components/Vdata.js"></script>
 <script src="./Scripts/vases.js"></script>
+
+<script src="./signin.js"></script>
+<script src="/team/Somya/header.js" type="module"></script>
+
+
+<script type="module" >
+    import foot from "/team/Somya/footer.js"
+    let ft = foot()
+    document.getElementById("fo").innerHTML = ft
+</script>
