--- a/team/Atul/vases.html
+++ b/team/Atul/vases.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-16x16.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/team/Somya/footer.css">
 
     
 </head>
@@ -185,7 +186,7 @@
 <script src="./Scripts/vases.js"></script>
 
 <script src="./signin.js"></script>
-<script src="/team/Somya/header.js" type="module"></script>
+<!-- <script src="/team/Somya/header.js" type="module"></script> -->
 
 
 <script type="module" >
