--- a/team/Atul/artificialF.html
+++ b/team/Atul/artificialF.html
@@ -12,8 +12,15 @@
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-16x16.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./team/Somya/footer.css">
+    <!-- <link rel="stylesheet" href="./team/Somya/header.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
 </head>
 <body>
+    <div id="header"></div>
     <p id="txt"><a href="">Home</a> / <a href="">Home Decor</a> / <a href="">ArtiFicial Greenery</a> / <a href="">Artificial Flowers</a></p>
     <div id="h">
         <img src="https://contentgrid.thdstatic.com/hdus/en_US/DTCCOMNEW/fetch/delivery-desktop.jpg" alt="">
@@ -183,3 +190,4 @@
 </html>
 <script src="./components/ArtiFlowerdata.js"></script>
 <script src="./Scripts/artificialF.js"></script>
+<script src="/team/Somya/header.js" type="module"></script>
