--- a/team/Atul/vases.html
+++ b/team/Atul/vases.html
@@ -13,10 +13,17 @@
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/team/Somya/footer.css">
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/team/Somya/footer.css">
+    <!-- <link rel="stylesheet" href="./team/Somya/header.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
 
     
 </head>
 <body>
+    <div id="header"></div>
     <p id="txt"><a href="">Home</a> / <a href="">Home Decor</a> / <a href="">home Accents</a> / <a href="">Vases</a></p>
     <div id="h">
         <img src="https://contentgrid.thdstatic.com/hdus/en_US/DTCCOMNEW/fetch/delivery-desktop.jpg" alt="">
@@ -177,18 +184,12 @@
         </div>
         <div id="container"></div>
     </div>
-    <div id="fo">
-
-    </div>
+    <div id="fo"> </div>
 </body>
 </html>
 <script src="./components/Vdata.js"></script>
 <script src="./Scripts/vases.js"></script>
-
-<script src="./signin.js"></script>
-<!-- <script src="/team/Somya/header.js" type="module"></script> -->
-
-
+<script src="/team/Somya/header.js" type="module"></script>
 <script type="module" >
     import foot from "/team/Somya/footer.js"
     let ft = foot()
