--- a/team/Somya/footer.html
+++ b/team/Somya/footer.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="./footer.css">
 </head>
 <body>
-    <div id="fo">
-
-    </div>
+    <div id="fo"></div>
 </body>
 </html>
 
