--- a/team/Atul/artificialF.html
+++ b/team/Atul/artificialF.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/index.css">
-    <link rel="stylesheet" href="./team/Somya/footer.css">
+    <link rel="stylesheet" href="/team/Somya/footer.css">
     <!-- <link rel="stylesheet" href="./team/Somya/header.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -186,8 +186,14 @@
         </div>
         <div id="container"></div>
     </div>
+    <div id="fo"></div>
 </body>
 </html>
 <script src="./components/ArtiFlowerdata.js"></script>
 <script src="./Scripts/artificialF.js"></script>
 <script src="/team/Somya/header.js" type="module"></script>
+<script type="module" >
+    import foot from "/team/Somya/footer.js"
+    let ft = foot()
+    document.getElementById("fo").innerHTML = ft
+</script>
