--- a/team/Atul/jewelry.html
+++ b/team/Atul/jewelry.html
@@ -10,10 +10,17 @@
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-16x16.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/team/Somya/footer.css">
+    <!-- <link rel="stylesheet" href="./team/Somya/header.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
     <title>Jewellery</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
+    <div id="header"></div>
     <p id="txt"><a href="">Home</a> / <a href="">Home Decor</a> / <a href="">home Accents</a> / <a href="">Jewelry Boxes</a></p>
     <div id="h">
         <img src="https://contentgrid.thdstatic.com/hdus/en_US/DTCCOMNEW/fetch/bopis-desktop.jpg" alt="">
@@ -176,7 +183,14 @@
         </div>
         <div id="container"></div>
     </div>
+    <div id="fo"></div>
 </body>
 </html>
 <script src="./components/jewelrydata.js"></script>
 <script src="./Scripts/jewelry.js"></script>
+<script src="/team/Somya/header.js" type="module"></script>
+<script type="module" >
+    import foot from "/team/Somya/footer.js"
+    let ft = foot()
+    document.getElementById("fo").innerHTML = ft
+</script>
