--- a/team/Prithvi/halloween.html
+++ b/team/Prithvi/halloween.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/team/Somya/footer.css">
+    <!-- <link rel="stylesheet" href="./team/Somya/header.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
     <title>Halloween</title>
    
         <link rel="stylesheet" href="halloween.css">
@@ -11,6 +17,7 @@
    
 </head>
 <body>
+    <div id="header"></div>
     <div id="container">
         <div id="sidebar"> <div id="sidebar">
             <div id="sidebar">
@@ -84,9 +91,16 @@
         </div></div>
         <div id="main"></div>
     </div>
-    
+    <div id="fo"></div>
 </body>
 </html>
 <script src="halloween.js">
 
+</script>
+
+<script src="/team/Somya/header.js" type="module"></script>
+<script type="module" >
+    import foot from "/team/Somya/footer.js"
+    let ft = foot()
+    document.getElementById("fo").innerHTML = ft
 </script>
