--- a/team/Prithvi/bathroomIdeas.html
+++ b/team/Prithvi/bathroomIdeas.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="bathroomIdeas.css">
 </head>
 <body>
+    <p id="p"> Home / DIY Projects & Ideas / Home Decor Ideas / Bathroom Ideas & Projects</p>
+    <h1>Bathroom Ideas & Projects</h1>
+
     <div id="container">
         <div id="sidebar">
             <div id="sidebar">
