--- a/team/shilajit/search.html
+++ b/team/shilajit/search.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
-    <link rel="shortcut icon" href="./team/shilajit/favicon/android-chrome-192x192.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./team/shilajit/favicon/android-chrome-512x512.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./team/shilajit/favicon/apple-touch-icon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./team/shilajit/favicon/favicon-16x16.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./team/shilajit/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/android-chrome-512x512.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/apple-touch-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/team/shilajit/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/team/Somya/footer.css">
     <link rel="stylesheet" href="/team/shilajit/search.css">
@@ -28,7 +28,9 @@
 </body>
 </html>
 
-<script src="/team/Somya/header.js" type="module"></script>
+<script src="/team/shilajit/scripts/searchheader.js" type="module"></script>
+<script src="/team/Somya/navbar.js" type="module"></script>
+<script src="./scripts/search.js" type="module"></script>
 
 <script type="module" >
     import foot from "/team/Somya/footer.js"
