--- a/team/Somya/footer.html
+++ b/team/Somya/footer.html
@@ -18,4 +18,4 @@
     let ft = foot()
     document.getElementById("fo").innerHTML = ft
 </script>
-
+<script src="/team/shilajit/cart.html"></script>
