--- a/team/Rashid/install.html
+++ b/team/Rashid/install.html
@@ -41,12 +41,12 @@
                 <h1>Request a Free Consultation</h1>
             </div>
             <div id="box3">
-                <h3 id="h31">Meet with a kitchen designer in store for a free< Constructor</h3>
+                <h3 id="h31">Meet with a kitchen designer in store for a free Constructor</h3>
                         <h3 id="h32">What is your zip code</h3>
             </div>
             <div id="box4">
                 <form>
-                    <input type="text" placeholder="Zipcode">
+                    <input id="zip" type="text" placeholder="Zipcode">
                 </form>
             </div>
             <div id="box5">
